<resources>
    <string name="app_name">FitWiz</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="squat">Most people skip squats because they’re hard. They use excuses like “Squats are bad for the knees”. But, put bluntly, if you’re not Squatting every week, using free weights, and breaking parallel on every rep, your training program is ineffective.</string>
    <string name="crunch">As a core-training exercise, crunches help improve your balance by strengthening your abdominal muscles. Strong core muscles improve your posture, which helps you function efficiently in everyday life and in sporting events. A healthy posture also helps prevent lower back pain and muscle injury.</string>
    <string name="pushup">Traditional pushups are beneficial for building upper body strength. They work the triceps, pectoral muscles, and shoulders. When done with proper form, they can also strengthen the lower back and core by engaging (pulling in) the abdominal muscles. Pushups are a fast and effective exercise for building strength. They can be done from virtually anywhere and don’t require any equipment.</string>
    <string name="jumpingjack">Jumping jack – is a classic cardio exercise that speeds up your heartbeat without additional equipment. This energy-intensive exercise will burn a lot of calories and tighten outer and inner thighs, quads, deltoid muscles and the latissimus dorsi. Jumping jack is a plyometric exercise where the muscles of the whole body engage. This exercise can be a warm-up, but its implementation for a long period is already a serious cardio workout.</string>
    <string name="glutebridge">You should feel the burn in your glutes and your hamstrings if you’re doing it correctly. The bridge is also great for improving hip mobility and strengthening your lower back, two things that any desk-bound worker can really benefit from.</string>
    <string name="lunges">Lunges are a perfect addition to your daily routine. They can be done virtually anywhere -- try knocking out a set in front of the TV or in the kitchen while you are waiting for dinner to cook. They also do not require any equipment to be effective. Lunges are body-weight exercises, meaning they make use of the bodys own weight as resistance. If you tire of the same old thing and desire a bit more of a challenge, you can up the intensity of your lunges by adding weights,
        increasing the number of repetitions, widening your stance or using an inclined surface, such as a bench or chair.</string>
    <string name="plank">A plank exercise is one where the trunk portion of the body is lifted off the ground while ensuring that the entire body is held in a straight line. This is one of the major fact that adds to the health benefits of the plank exercises, as the body has to take this particular position. A plank may look easy but in reality is a tough job, which needs to be done properly. The health benefits of the plank exercises include tightening and strengthening the core and back muscles.
        Improved balance, appropriate posture and toned up hamstrings and glutes with regular practice are another important health benefits of plank exercises.</string>
    <string name="sn">There are several variations to this sequence of postures known as salute to the sun. They’re traditionally practiced as the sun is rising, and whichever version of Surya Namaskar you practice, they’re a great way to warm up and start to sync movement of the body with the flow of the breath.</string>
    <string name="ut">It’s most commonly called Chair Pose, Call it what you will, Utkatasana is an amazing way to generate heat in the body and quickly build energy. It activates the core and the legs and challenges your mind to stay present and positive, all great benefits for a morning practice.</string>
    <string name="pu">I mean, if you’re going to go to all the trouble of sitting down in your not-so-comfy Chair, you might as well get the twisting benefits of the revolved variation right?! Twisting poses have a squeeze and release effect on your digestive system and internal organs so they help promote detoxification.</string>
    <string name="dfd">If you only have time for one in the morning, I’d make it this one. The whole body’s involved so it’s a great way to wake up every part of your physique. That beautiful stretch through the backs of the legs and hips just feels incredible. </string>
    <string name="ll">I’ve got a problematic psoas muscle that likes to grip and shorten any chance it can get, so Anjaneyasana is like a bubble bath for my hip flexors. You get that lovely open stretchy feeling through the hips, arms and torso, and it also builds strength in the legs.</string>
    <string name="triangle">One of the classic yoga asanas, Trikonasana helps to give you a strong sense of grounding and stability through activating and balancing the root chakra, Muladhara. It powers up the legs and core, and the subtle twist allows you to open and light up the heart space. Beautiful.</string>
    <string name="day1">1.Dumbbell Chest Press (4 Sets)(x15 x12 x10 x8)\n
2.Dumbbell Pullover (3 set)(x15 x12 x8)\n
3.Dumbbell Pronate Kickback (3 set)(x15 x12 x8)\n
4.Dumbbell Fly (3 set)(x12 x10 x8)\n
5.Dumbbell Press with Rotation (3 set)(x12 x10 x8)\n
6.Dumbbell Elbow Out Ext (3 set)(x12 x10 x8)\n
7.Bench Dips / Chair Dips (3 set)(x8)\n
8.Svend Press (3 set)(x8)\n
9.Elevated Pushup / Floor/ Knees  60 sec\n
10.Dumbbell Triceps  60 sec
    </string>
    <string name="day2">1.Dumbbell Sumo Deadlift (4 set)(x8)\n
2.Dumbbell Front Squat (3 set)(x12 x10 x8)\n
3.Dumbbell Bulgarian Hip Hinge (3 set)(x12 x10 x8)\n
4.Dumbbell Hack Squats / Heels Elevated (3 set)(x12 x10 x8)\n
5.Dumbbell Stiff Leg Deadlifts / Toes Elevated (3 set)(x12 x10 x8)\n
6.Dumbbell Step Ups (3 set)(x8)\n
7.Dumbbell Side Lunge / Elevated Side Lunge (3 set)(x8)\n
8.Dumbbell Squats (3 set)(x10)
    </string>
    <string name="day3">1.Deadlift / DB Deadlift (4 set)(x15 x12 x10 x8)\n
2.Bent Over Row / DB (4 set)(x15 x12 x10 x8)\n
3.Zottman Curls (4 set)(x15 x12 x10 x8)\n
4.Reverse Fly (3 set)(x12 x10 x8))\n
5.One Arm Row + Twist (3 set)(x12 x10 x8)\n
6.Still Leg DL (3 set)(x12 x10 x8)\n
7.Hammer Curl 303 Tempo (3 set)(×8)\n
8.Towel Skydivers 303 Tempo (3 set)(×8)\n
9.Dumbbell Snatch x 60 sec\n
10.Burnout Alt Curl x 60 sec
    </string>
    <string name="day4">
        Complete 2 rounds of each exercise for 50 seconds:\n
1.Scissor Jumps / Switch Jumps\n
2.Bear Plank Walkout w/ Pushup / No pushup\n
3.Skaters / Lateral Juke\n
4.Bear Plank Box Walks / High Plank\n
5.Broad Jump + Hop Back / Hop Forward And Back\n
6.High Plank Elbow to Knee / from Knees (kickback)\n
7.180 Squat Jumps / 180 Squats\n
8.Bear Plank Updowns / from Knees\n
9.Runner’s Skip / Runner’s Stepback\n
10.Crab Reach / Rest in Between\n
\n
Abs Workout\n
1.3 Level Situps / Crunches\n
2.Superman Plank / from Knees\n
3.Elevated Knee Tuck / Lying Knee Tuck\n
4.-up Situps / Crunches\n
5.Half Boat Twist / Modified w/ Feet Down\n
6.Forearm Plank Twist / from Knees\n
\n
Cool Down\n
1.Chest Opener
2.Upright Row + External Rotation
3.Toe Touch
    </string>
    <string name="rest">
        It is rest that makes you stronger, because it is the rest that allows the muscles that you have broken down to heal and recover.
        It is the rest that allows you to recover so you can be strong, and thereby handle the increased weight, and increased number of sets and reps needed to gain further.
    </string>
    <string name="sugartext">The most important part is to cut back on sugars and starches (carbs).
When you do that, your hunger levels go down and you end up eating much fewer calories.
Now instead of burning carbs for energy, your body starts feeding off of stored fat.
Another benefit of cutting carbs is that it lowers insulin levels, causing your kidneys to shed excess sodium and water out of your body. This reduces bloat and unnecessary water weight.
It is not uncommon to lose up to 10 pounds (sometimes more) in the first week of eating this way, both body fat and water weight.</string>
    <string name="proteintext">Each one of your meals should include a protein source, a fat source and low-carb vegetables.\n
   Constructing your meals in this way will automatically bring your carb intake into the recommended range of 20–50 grams per day.\n
   Protein Sources-\n
       Meat:Beef, chicken, pork, lamb, etc.\n
       Fish and Seafood: Salmon, trout, shrimp, etc.\n
       Eggs: Whole eggs with the yolk are best.\n
   The importance of eating plenty of protein cannot be overstated.
   This has been shown to boost metabolism by 80 to 100 calories per day.
   High-protein diets can also reduce cravings and obsessive thoughts about food by 60%, reduce the desire for late-night snacking by half, and make you so full that you automatically eat 441 fewer calories per day — just by adding protein to your diet\n
   When it comes to losing weight, protein is the king of nutrients.
       Low-Carb Vegetables-
   Broccoli,
Cauliflower,
Spinach,
Tomatoes,
Kale,
Brussels sprouts,
Cabbage,
Swiss chard,
Lettuce,
Cucumber.

       Don’t be afraid to load your plate with these low-carb vegetables. You can eat massive amounts of them without going over 20–50 net carbs per day.
       Fat Sources-
       Olive oil
Coconut oil
Avocado oil
Butter

   </string>
    <string name="exercisetext">You dont need to exercise to lose weight on this plan, but it is recommended.

The best option is to go to the gym 3–4 times a week. Do a warm-up and lift some weights.

If youre new to the gym, ask a trainer for some advice.

By lifting weights, you will burn lots of calories and prevent your metabolism from slowing down, which is a common side effect of losing weight

Studies on low-carb diets show that you can even gain a bit of muscle while losing significant amounts of body fat

If lifting weights is not an option for you, then doing some cardio workouts like walking, jogging, running, cycling or swimming will suffice.</string>
    <string name="tiptext">1.Eat a high-protein breakfast. Eating a high-protein breakfast has been shown to reduce cravings and calorie intake throughout the day.\n
2.Avoid sugary drinks and fruit juice. These are the most fattening things you can put into your body, and avoiding them can help you lose weight.\n
3.Drink water a half hour before meals. One study showed that drinking water a half hour before meals increased weight loss by 44% over 3 months .\n
4.Choose weight loss-friendly foods (see list). Certain foods are very useful for losing fat. Here is a list of the 20 most weight loss-friendly foods on earth.\n
5.Eat soluble fiber. Studies show that soluble fibers may reduce fat, especially in the belly area. Fiber supplements like glucomannan can also help .\n
6.Drink coffee or tea. If you're a coffee or tea drinker, then drink as much as you want as the caffeine can in them boost your metabolism by 3–11% .\n
7.Eat mostly whole, unprocessed foods. Base most of your diet on whole foods. They are healthier, more filling and much less likely to cause overeating.\n
8.Eat your food slowly. Fast eaters gain more weight over time. Eating slowly makes you feel more full and boosts weight-reducing hormones (26, 27).\n
9.Weigh yourself every day. Studies show that people who weigh themselves every day are much more likely to lose weight and keep it off for a long time.\n
10.Get a good night's sleep, every night. Poor sleep is one of the strongest risk factors for weight gain, so taking care of your sleep is important.</string>
</resources>