<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_drawer_signed"
    tools:context=".health">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/AlertTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:visibility="invisible"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:textSize="40dp"
                android:background="@color/grey"
                android:text="HEALTH N DIET"
                android:layout_centerHorizontal="true"
                android:id="@+id/hnd"
                android:gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sugar"
                android:textAlignment="center"
                android:textSize="25dp"
                android:background="@color/blueheader"
                android:layout_below="@+id/hnd"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Cut Back on Sugars and Starches"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@+id/sugar"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:id="@+id/sugartext"
                android:text="@string/sugartext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/protein"
                android:textAlignment="center"
                android:textSize="25dp"
                android:background="@color/blueheader"
                android:layout_below="@+id/sugartext"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Eat Protein, Fat and Vegetables"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@+id/protein"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:id="@+id/proteintext"
                android:text="@string/proteintext"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exercise"
                android:textAlignment="center"
                android:textSize="25dp"
                android:background="@color/blueheader"
                android:layout_below="@+id/proteintext"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Lift Weights 3 Times Per Week"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@+id/exercise"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:id="@+id/exercisetext"
                android:text="@string/exercisetext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tips"
                android:textAlignment="center"
                android:textSize="20dp"
                android:background="@color/blue"
                android:layout_below="@+id/exercisetext"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="Weight Loss Tips to Make Things Easier (and Faster)"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@+id/tips"
                android:textSize="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:id="@+id/tiptext"
                android:text="@string/tiptext"/>




        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/my_header"
        app:menu="@menu/my_nav_menu">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>